--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1070,7 +1070,7 @@ The proof is straightforward. We introduce assumptions to context and apply the 
 
 The last thing to do is proving the recursive equation, shown in the listing above. In theory it should not be necessary -- the functional induction principle should always suffice -- but in practice it is sometimes handy to have it. The purpose of the recursive equation is to be able to ``unfold'' the function's definition, replacing it with the desired, clean body we wanted to have at the very beginning instead of the clumsy actual implementation, which involves hairy details like the termination proof.
 
-The proof is very easy -- we introduce assumptions into context and proceed by functional induction, using the principle we just derived. This needs to be done with the tactic \m{apply}, because the tactic \m{induction} doesn't understand our custom principle. In both cases we finish by rewriting some hypotheses. Note that the induction hypotheses were not necessary.
+The proof is very easy -- we introduce assumptions into context and proceed by functional induction, using the principle we just derived. This needs to be done with \m{apply}, because \m{induction} doesn't understand our custom principle. In both cases we finish by rewriting some hypotheses. Note that the induction hypotheses were not necessary - a case analysis would be sufficient, but we don't have a ``functional case analysis principle'' and it's not worth to derive one.
 
 Deriving the functional induction principle turned out to be pretty easy and it should be just as easy when applied with the variant of inductive domain method from section \ref{irrelevant}. Moreover, derivation of the principle can be easily automated (together with the the inductive domain method) in most situations, as we will see in section \ref{automate}.
 
@@ -1080,28 +1080,36 @@ Another not-so-tame class of recursive functions that do not easily submit to ou
 
 \subsection{Don't do this at home}
 
-Before proceeding to see the automation, we will try to explore another way of deriving the functional induction principle -- a way which, at first sight, looks much easier and more appealing than the one we have already seen, but upon closer inspection leads down a rabbit hole.
-
-That way is to omit the inductive graph alltogether and try to derive the functional induction principle from the induction principle of the domain predicate. The first step in such an attempt is to prove an induction principle for the helper function \m{qs'}, show in the listing below.
+Before proceeding to see the automation, we will try to explore another way of deriving the functional induction principle -- a way which, at first sight, looks much easier and more appealing than the one we have already seen, but upon closer inspection leads down a rabbit hole. That way is to omit the inductive graph altogether and try to derive the functional induction principle from the induction principle of the domain predicate. The first step in such an attempt is to prove an induction principle for the helper function \m{qs'}, shown in the listing below.
 
 \inputminted
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=222,
+    firstline=200,
     lastline=220
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
-Even though deriving an induction principle for the helper function is very easy, transfering the principle to \m{qs} is impossible, as shown in the listing below.
-
+Even though deriving an induction principle for the helper function is very easy, transfering the principle to \m{qs} is impossible. The reason is that the induction hypotheses for \m{qs} hold only for specific proofs of \m{QSDom A l} (namely \m{QSDom\_all A lt} and \m{QSDom\_all A gt}, where \m{lt} and \m{gt} are the list of elements smaller and greater than the pivot, respectively), whereas the induction hypotheses for \m{qs'} are required to hold for all possible proofs of \m{QSDom A lt} and \m{QSDom A gt}. Compare the above listing with the listing below, which shows an attempt at proving the functional induction principle for \m{qs}.
 
 \inputminted
 [
     frame=lines,
     bgcolor=CoqIDE,
     firstline=222,
-    lastline=241
+    lastline=240
+]
+{Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+
+A smart Coq user could try to salvage the above proof by attempting to prove that any two \m{d\ :\ QSDom A l} are equal. This too, however, is impossible, as can be seen in the listing below (or rather, by going over the below listing interactively in CoqIDE). We start by induction on \m{d1} and then perform case analysis on \m{d2}. When they are constructed with different constructors, we have an easy contradiction (\m{short l} is both \m{None} and \m{Some} at the same time). When both are \m{Short}, we are required us to prove that any two proofs of \m{short l = None} are equal. This is possible, but pretty involved -- techniques from Homotopy Type Theory are necessary.\footnote{The appropriate technique is called the \textit{encode-decode method}. It is described in the HoTT Book \cite{HoTTBook}.} The real problem is that in the last case, when both \m{d1} and \m{d2} we're constructed using \m{Long}, atfter establishing some initial equalities, we have to prove that two proofs of \m{short l = Some (h, t)} are equal. This, according to Homotopy Type Theory, for a general \m{A\ :\ Type} is not possible, as it contradicts Univalence.
+
+\inputminted
+[
+    frame=lines,
+    bgcolor=CoqIDE,
+    firstline=243,
+    lastline=265
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
